--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		</header>
 		<main class="main">
 			<div class="achievement">
-				<div class="achievment__container">
+				<div class="achievement__container">
 					<h4 class="achievement__title">ACHIEVEMENT</h4>
 					<div class="achievement__cards">
 						<div class="achievement__card card">
@@ -88,7 +88,7 @@
 					<div class="minimalist__description description">
 						<div class="description__column">
 							<h4 class="description__title">Project Overview</h4>
-							<div class="descriprion__section">
+							<div class="description__section">
 								<div class="description__text">
 									<p>
 										Online learning with us does not interfere with your daily life. because learning can be
@@ -133,10 +133,10 @@
 								<img src="img/06.webp" alt="">
 							</div>
 						</div>
-						<div class="items__image">
+						<div class="minimalist__image">
 							<img src="img/07.webp" alt="">
 						</div>
-						<div class="minimalist__items">
+						<div class="minimalist__items items">
 							<div class="items__image">
 								<img src="img/08.webp" alt="">
 							</div>
@@ -144,7 +144,6 @@
 								<img src="img/09.webp" alt="">
 							</div>
 						</div>
-						
 					</div>
 				</div>
 			</div>
