--- a/index.html
+++ b/index.html
@@ -125,24 +125,15 @@
 						</div>
 					</div>
 					<div class="minimalist__images">
-						<div class="minimalist__items items">
-							<div class="items__image">
-								<img src="img/05.webp" alt="">
-							</div>
-							<div class="items__image">
-								<img src="img/06.webp" alt="">
-							</div>
+						<div class="minimalist__item"><img src="img/05.webp" alt="">
 						</div>
-						<div class="minimalist__image">
-							<img src="img/07.webp" alt="">
+						<div class="minimalist__item"><img src="img/06.webp" alt="">
 						</div>
-						<div class="minimalist__items items">
-							<div class="items__image">
-								<img src="img/08.webp" alt="">
-							</div>
-							<div class="items__image">
-								<img src="img/09.webp" alt="">
-							</div>
+						<div class="minimalist__item"><img src="img/07.webp" alt="">
+						</div>
+						<div class="minimalist__item"><img src="img/08.webp" alt="">
+						</div>
+						<div class="minimalist__item"><img src="img/09.webp" alt="">
 						</div>
 					</div>
 				</div>
